# Eko-AI-Business-Automation

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  KIMI_SWARM_PROMPT.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  plan.md
backend/: Dockerfile  celerybeat-schedule  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/agents/: __init__.py  graph.py  metadata_context.py
backend/app/agents/discovery/: agent.py
backend/app/agents/research/: agent.py  finder.py  metadata_aware_agent.py
backend/app/api/v1/: analytics.py  (+19 more)
backend/app/core/: security.py
backend/app/db/: base.py  init_metadata.sql  migrate_to_workspace.py  seed.py  seed_metadata.py  session.py  sync_schema.py  workspace_hooks.py
backend/app/models/: booking.py  campaign.py  deal.py  dynamic_record.py  field_metadata.py  landing_page.py  landing_page_visit.py  lead.py  object_metadata.py  payment.py  phone_call.py  proposal.py  sequence.py  setting.py  user.py  view.py  workspace.py
backend/app/schemas/: booking.py  campaign.py  landing_page.py  lead.py  metadata.py  sequence.py  user.py  view.py  workspace.py
backend/app/services/: apify.py  cal_com.py  dynamic_data_service.py  eko_rog_notifier.py  email_reply_agent.py  landing_page_generator.py  landing_page_template.py  lead_analysis_generator.py  metadata_service.py  outscraper.py  paperclip.py  reply_analyzer.py  sales_brief_generator.py  serpapi.py  tenant_context.py  tts_generator.py  vapi_client.py  view_service.py
backend/app/tasks/: celery_app.py  scheduled.py
backend/app/utils/: ai_client.py  calendar_links.py  email.py  embedding.py  geocoding.py
backend/migrations/: add_performance_indexes.sql
backend/tests/: test_auth.py  test_discovery.py  test_research.py
(+109 files in other folders)
